tailwind css on fire

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,9 @@
-<p>login works!</p>
+<mat-toolbar  color="primary">
+  <mat-toolbar-row>
+      <span>web app</span>
+      <span class="flex-auto"></span>
+      <mat-icon class="example-icon" aria-hidden="false" aria-label="Example user verified icon">verified_user</mat-icon>
+  </mat-toolbar-row>
+</mat-toolbar>
+
+<p class="bg-red-400">login works!</p>
